add login and registration

--- a/hmtl/register.html
+++ b/hmtl/register.html
@@ -7,16 +7,26 @@
             <fieldset classs="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
                 <dir class="form-group">
-                    form-group username
+                    username
                     <input type="text" name="username" placeholder="Username">
                         <div class="invalid-feedback">
                             invalid-feedback
                         </div>
 
                 </dir>
+
                 <dir class="form-group">
-                    form-group password
+                    password
                     <input type="password" name="password" placeholder="Password">
+                        <div class="invalid-feedback">
+                            invalid-feedback
+                        </div>
+
+                </dir>
+
+                <dir class="form-group">
+                    email
+                    <input type="email" name="email" placeholder="Email">
                         <div class="invalid-feedback">
                             invalid-feedback
                         </div>
