--- a/hmtl/register.html
+++ b/hmtl/register.html
@@ -1,49 +1,57 @@
 {% extends "Layout" %}
 {% block content %}
-    <h1>{{name}}</h1>
-    <div class="content-section">
-        <form method="POST" action="">
-
-            <fieldset classs="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
-                <dir class="form-group">
-                    username
-                    <input type="text" name="username" placeholder="Username">
-                        <div class="invalid-feedback">
-                            invalid-feedback
-                        </div>
-
-                </dir>
-
-                <dir class="form-group">
-                    password
-                    <input type="password" name="password" placeholder="Password">
-                        <div class="invalid-feedback">
-                            invalid-feedback
-                        </div>
-
-                </dir>
-
-                <dir class="form-group">
-                    email
-                    <input type="email" name="email" placeholder="Email">
-                        <div class="invalid-feedback">
-                            invalid-feedback
-                        </div>
-
-                </dir>
-
-            </fieldset>
+<h1>{{name}}</h1>
+<div class="content-section">
+    <form method="POST" action="">
+        <fieldset classs="form-group">
+            <legend class="border-bottom mb-4">Join Today</legend>
+            
             <dir class="form-group">
-                <button type="submit"> Register </button>
-
+                <label class="form-control-label" for="text">Username: </label>
+                {% if error_username %}
+                    <input type="text" class="form-control form-control-lg is-invalid" id="text" name="username" placeholder="Username">
+                    <div class="invalid-feedback">
+                        <span>Wrong username</span>
+                    </div>
+                {% else %}
+                    <input type="text" class="form-control form-control-lg" id="text" name="username" placeholder="Username">
+                {% endif %}
             </dir>
-        </form>
-    </div>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="#">Sign In</a>
-            </small>
-        </div>
 
+            <dir class="form-group">
+                <label class="form-control-label" for="text">Email: </label>
+                {% if error_email %}
+                    <input type="email" class="form-control form-control-lg is-invalid" id="text" name="email" placeholder="Email">
+                    <div class="invalid-feedback">
+                        <span>Wrong email</span>
+                    </div>
+                {% else %}
+                    <input type="text" class="form-control form-control-lg" id="text" name="email" placeholder="Email">
+                {% endif %}
+            </dir>
+
+            <dir class="form-group">
+                <label class="form-control-label" for="pwd">Password:</label>
+                {% if error_password %}
+                    <input type="password" class="form-control form-control-lg is-invalid" id="pwd" name="password" placeholder="Password">
+                    <div class="invalid-feedback">
+                        <span>Wrong password</span>
+                    </div>
+                {% else %}
+                    <input type="password" class="form-control form-control-lg" id="pwd" name="password" placeholder="Password">
+                {% endif %}
+            </dir>
+
+        </fieldset>
+
+        <dir class="form-group">
+            <button class="btn btn-outline-info" type="submit"> Register </button>
+        </dir>
+    </form>
+</div>
+<div class="border-top pt-3">
+    <small class="text-muted">
+        Already Have An Account? <a class="ml-2" href="/login">Sign In</a>
+    </small>
+</div>
 {% endblock content %}
