--- a/hmtl/register.html
+++ b/hmtl/register.html
@@ -45,7 +45,7 @@
         </fieldset>
 
         <dir class="form-group">
-            <button class="btn btn-outline-info" type="submit"> Register </button>
+            <button class="btn btn-outline-dark" type="submit"> Register </button>
         </dir>
     </form>
 </div>
