--- a/hmtl/Layout.html
+++ b/hmtl/Layout.html
@@ -9,11 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/main.css">
-    {% if title %}
-        <title>Rust Rocket - {{title}}</title>
-    {% else %}
-        <title>Rust Rocket</title>
-    {% endif %}
+    <title>Rust Rocket </title>
+
   {% endblock head %}
 </head>
 <body>
@@ -24,49 +21,33 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      {% if is_authenticated %}
       <div class="collapse navbar-collapse" id="navbarToggle">
         <div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link" href="#">Home</a>
-          <a class="nav-item nav-link" href="/about">About</a>
+          <a class="nav-item nav-link" href="#">Charts</a>
+          <a class="nav-item nav-link" href="#">Wallet</a>
         </div>
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
-           {% if current_user.is_authenticated %}
-              <a class="nav-item nav-link" href="#">New Post</a>
               <a class="nav-item nav-link" href="#">Account</a>
               <a class="nav-item nav-link" href="#">Logout</a>
-
-           {% else %}
+      {% else %}
+        <div class="navbar-nav">  
               <a class="nav-item nav-link" href="/login">Login</a>
               <a class="nav-item nav-link" href="/register">Register</a>
-            {% endif %}
+      {% endif %}
         </div>
       </div>
     </div>
   </nav>
 </header>
-
     <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
-
-
         {% block content %}
         {% endblock %}
     </div>
-    <div class="col-md-4">
-      <div class="content-section">
-        <h3>Our Sidebar</h3>
-        <p class='text-muted'>You can put any information here you'd like.
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Latest Posts</li>
-            <li class="list-group-item list-group-item-light">Announcements</li>
-            <li class="list-group-item list-group-item-light">Calendars</li>
-            <li class="list-group-item list-group-item-light">etc</li>
-          </ul>
-        </p>
-      </div>
-    </div>
+    
   </div>
 </main>
 
