--- a/hmtl/register.html
+++ b/hmtl/register.html
@@ -26,7 +26,7 @@
                         <span>Wrong email</span>
                     </div>
                 {% else %}
-                    <input type="text" class="form-control form-control-lg" id="text" name="email" placeholder="Email">
+                    <input type="email" class="form-control form-control-lg" id="text" name="email" placeholder="Email">
                 {% endif %}
             </dir>
 
