--- a/hmtl/wallet.html
+++ b/hmtl/wallet.html
@@ -31,7 +31,7 @@
                                 <div class="form-group row">
                                     <label for="text" class="col-form-label col-sm-3">Transaction date:</label>
                                     <div class="col-sm-5">
-                                        <input type="date" class="form-control" id="text"  name="transaction_date" placeholder="Transaction date">
+                                        <input type="date" class="form-control" id="text"  name="date_transaction" placeholder="Transaction date">
                                     </div>
                                 </div>
                             </fieldset>
@@ -44,14 +44,14 @@
                                     <div class="form-group row">
                                         <label for="text" class="col-form-label col-sm-3">Amount:</label>
                                         <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="text"  name="sell_amount" placeholder="Sell amount">
+                                            <input type="text" class="form-control" id="text"  name="sell_amount" placeholder="Sell amount">
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="FormControlSelect1" class="col-form-label col-sm-3">Currency:</label>
                                         <div class="col-sm-9">
-                                            <select class="form-control" id="FormControlSelect1">
+                                            <select type="text" class="form-control" id="FormControlSelect1" name="sell_currency">
                                                 <option>PLN</option>
                                                 <option>USD</option>
                                                 <option>EUR</option>
@@ -71,14 +71,14 @@
                                     <div class="form-group row">
                                         <label for="text" class="col-form-label col-sm-3">Amount:</label>
                                         <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="text"  name="buy_amount" placeholder="Buy amount">
+                                            <input type="text" class="form-control" id="text"  name="buy_amount" placeholder="Buy amount">
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="FormControlSelect2" class="col-form-label col-sm-3">Currency:</label>
                                         <div class="col-sm-9">
-                                            <select class="form-control" id="FormControlSelect2">
+                                            <select type="text" class="form-control" id="FormControlSelect2" name="buy_currency">
                                                 <option>BTC</option>
                                                 <option>BCH</option>
                                                 <option>ETH</option>
