--- a/hmtl/login.html
+++ b/hmtl/login.html
@@ -1,48 +1,50 @@
 {% extends "Layout" %}
 {% block content %}
-<h1>{{name}}</h1>
-<div class="content-section">
-    <form method="POST" action="">
-        <fieldset classs="form-group">
-            <legend class="border-bottom mb-4">Log In</legend>
+<div class="col-md-8 container">
+    <h1>{{name}}</h1>
+    <div class="content-section">
+        <form method="POST" action="">
+            <fieldset classs="form-group">
+                <legend class="border-bottom mb-4">Log In</legend>
+
+                <dir class="form-group">
+                    <label class="form-control-label" for="text">Username: </label>
+                    {% if error_username %}
+                        <input type="text" class="form-control form-control-lg is-invalid" id="text" name="username" placeholder="Username or email">
+                        <div class="invalid-feedback">
+                            <span>wrong username</span>
+                        </div>
+                    {% else %}
+                        <input type="text" class="form-control form-control-lg" id="text" name="username" placeholder="Username or email">
+                    {% endif %}
+                </dir>
+
+                <dir class="form-group">
+                    <label class="form-control-label" for="pwd">Password:</label>
+                    {% if error_password %}
+                        <input type="password" class="form-control form-control-lg is-invalid" id="pwd" name="password" placeholder="Password">
+                        <div class="invalid-feedback">
+                            <span>Wrong password</span>
+                        </div>
+                    {% else %}
+                        <input type="password" class="form-control form-control-lg" id="pwd" name="password" placeholder="Password">
+                    {% endif %}
+                </dir>
+            </fieldset>
 
             <dir class="form-group">
-                <label class="form-control-label" for="text">Username: </label>
-                {% if error_username %}
-                    <input type="text" class="form-control form-control-lg is-invalid" id="text" name="username" placeholder="Username or email">
-                    <div class="invalid-feedback">
-                        <span>wrong username</span>
-                    </div>
-                {% else %}
-                    <input type="text" class="form-control form-control-lg" id="text" name="username" placeholder="Username or email">
-                {% endif %}
+                <button class="btn btn-outline-dark" type="submit"> Loigin </button>
             </dir>
-
-            <dir class="form-group">
-                <label class="form-control-label" for="pwd">Password:</label>
-                {% if error_password %}
-                    <input type="password" class="form-control form-control-lg is-invalid" id="pwd" name="password" placeholder="Password">
-                    <div class="invalid-feedback">
-                        <span>Wrong password</span>
-                    </div>
-                {% else %}
-                    <input type="password" class="form-control form-control-lg" id="pwd" name="password" placeholder="Password">
-                {% endif %}
-            </dir>
-        </fieldset>
-
-        <dir class="form-group">
-            <button class="btn btn-outline-dark" type="submit"> Loigin </button>
-        </dir>
-        
-        <small class="text-muted ml-2">
-            <a href="#">Forget Password?</a>
-        </small>
-    </form>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Need An Account? <a class="ml-2" href="/register">Sign Up Now</a>
-        </small>
+            
+            <small class="text-muted ml-2">
+                <a href="#">Forget Password?</a>
+            </small>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Need An Account? <a class="ml-2" href="/register">Sign Up Now</a>
+            </small>
+        </div>
     </div>
 </div>
 {% endblock content %}
