--- a/hmtl/wallet.html
+++ b/hmtl/wallet.html
@@ -27,7 +27,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form method="POST" action="/wallet/add_transaction">
+                    <form method="POST" action="/wallet_transactions/add_transaction">
                         <div class="container">
                             <fieldset class="container border p-2">
                                 <legend class="w-auto mb-0" style="font-size:16px">Date</legend>
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <form method="POST" action="/wallet/remove_transactions" id="remove_checkbox1" enctype="multipart/form-data">
+    <form method="POST" action="/wallet_transactions/remove_transactions" id="remove_checkbox1" enctype="multipart/form-data">
         <div class="container form-group">
             <table id="dtTransactions1" class="table table-striped table-bordered">
                 <thead>
